added image address

--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -68,7 +68,7 @@
     <div class="wrapper">
         <h2>Oops! Page not found.</h2>
         <div>
-            <img decoding="async" src="./404img.png" alt="404">
+            <img decoding="async" src="http://127.0.0.1:5500/404img.png" alt="404">
         </div>
         <h4>They say not all who wander are lost, but I <br> guess you're the exception.</h4>
         <button type="button" class="main-btn">GO BACK HOME</button>
